layout almost complete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,108 @@
 </head>
 <body>
 
+<div class="container">
+	<div class="header">
+		<div class="jumbotron">
+			<h1>Anytime Is Train Time!</h1>
+			<h3>Beep Boop Bop Boop</h3>
+		</div>
+	</div>
 
+	<div class="currentTrainScheduleContainer">
+		<div class="currentTrainScheduleHeader">
+			<p>Current Train Schedule</p>
+		</div>
+	
+		<div class="timeTableContainer">
+			<div class="row headerRow">
+				<div class="col-md-2">Train Name</div>
+				<div class="col-md-2">Destination</div>
+				<div class="col-md-4">Frequency (Minutes)</div>
+				<div class="col-md-2">Next Arrival</div>
+				<div class="col-md-2">Minutes Away</div>
+			</div>
+
+			<div class="row row1">
+				<div class="col-md-2">Empire Builder</div>
+				<div class="col-md-2">Chicago</div>
+				<div class="col-md-4">45</div>
+				<div class="col-md-2">13:45</div>
+				<div class="col-md-2">15</div>
+			</div>
+
+			<div class="row row2">
+				<div class="col-md-2">California Zephyr</div>
+				<div class="col-md-2">Los Angeles</div>
+				<div class="col-md-4">180 (Minutes)</div>
+				<div class="col-md-2">14:00</div>
+				<div class="col-md-2">30</div>
+			</div>
+
+			<div class="row row3">
+				<div class="col-md-2">Train Name</div>
+				<div class="col-md-2">Destination</div>
+				<div class="col-md-4">Frequency (Minutes)</div>
+				<div class="col-md-2">Next Arrival</div>
+				<div class="col-md-2">Minutes Away</div>
+			</div>
+
+			<div class="row row4">
+				<div class="col-md-2">Train Name</div>
+				<div class="col-md-2">Destination</div>
+				<div class="col-md-4">Frequency (Minutes)</div>
+				<div class="col-md-2">Next Arrival</div>
+				<div class="col-md-2">Minutes Away</div>
+			</div>
+
+			<div class="row row5">
+				<div class="col-md-2">Train Name</div>
+				<div class="col-md-2">Destination</div>
+				<div class="col-md-4">Frequency (Minutes)</div>
+				<div class="col-md-2">Next Arrival</div>
+				<div class="col-md-2">Minutes Away</div>
+			</div>
+
+			<div class="row row6">
+				<div class="rowOutputs1">
+					<div class="col-md-2">Train Name</div>
+					<div class="col-md-2">Destination</div>
+					<div class="col-md-4">Frequency (Minutes)</div>
+					<div class="col-md-2">Next Arrival</div>
+					<div class="col-md-2">Minutes Away</div>
+				</div>
+			</div>
+
+			<div class="row row7">
+				<div class="rowOutputs1">
+					<div class="col-md-2">Train Name</div>
+					<div class="col-md-2">Destination</div>
+					<div class="col-md-4">Frequency (Minutes)</div>
+					<div class="col-md-2">Next Arrival</div>
+					<div class="col-md-2">Minutes Away</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<p> </p>
+	<div class="addTrainContainer">
+		<div class="addTrainHeader">
+			<p>Add Train</p>
+		</div>
+			<div class="textFieldsContainer">
+				<p>Train Name</p>
+				<input type="text" name="trainName" class="trainNameInput"></input>
+				<p>Destination</p>
+				<input type="text" name="destination" class="destinationInput"></input>
+				<p>First Train Time</p>
+				<input type="text" name="firstTrainTime" class="firstTrainTimeInput"></input>
+				<p>Frequency</p>
+				<input type="text" name="frequency" class="frequencyInput"></input>
+				<p> </p>
+				<button>Submit</button>
+			</div>
+	</div>	
+</div>
 
 </body>
 
