--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
 			<p>Add Train</p>
 		</div>
 			<div class="textFieldsContainer">
-				<p>Train Name</p>
+				<div class="inputHeading">Train Name</div>
 				<input type="text" name="trainName" class="trainNameInput"></input>
-				<p>Destination</p>
+				<div class="inputHeading">Destination</div>
 				<input type="text" name="destination" class="destinationInput"></input>
-				<p>First Train Time</p>
+				<div class="inputHeading">First Train Time</div>
 				<input type="text" name="firstTrainTime" class="firstTrainTimeInput"></input>
-				<p>Frequency</p>
+				<div class="inputHeading">Frequency</div>
 				<input type="text" name="frequency" class="frequencyInput"></input>
 				<p> </p>
-				<button>Submit</button>
+				<button class="submitButton">Submit</button>
 			</div>
 	</div>	
 </div>
@@ -120,5 +120,6 @@
     <!-- Linking my JS and jQuery Sheets -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 
 </html>
