--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- My own CSS Sheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 	<!-- Firebase Link -->
-    <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 
 	<title>Train Scheduler</title>
 
@@ -104,13 +104,13 @@
 		</div>
 			<div class="textFieldsContainer">
 				<div class="inputHeading">Train Name</div>
-				<input type="text" name="trainName" class="trainNameInput"></input>
+				<input type="text" name="trainName" id="trainNameInput"></input>
 				<div class="inputHeading">Destination</div>
-				<input type="text" name="destination" class="destinationInput"></input>
+				<input type="text" name="destination" id="destinationInput"></input>
 				<div class="inputHeading">First Train Time</div>
-				<input type="text" name="firstTrainTime" class="firstTrainTimeInput"></input>
+				<input type="text" name="firstTrainTime" id="firstTrainTimeInput"></input>
 				<div class="inputHeading">Frequency</div>
-				<input type="text" name="trainFrequency" class="frequencyInput"></input>
+				<input type="text" name="trainFrequency" id="frequencyInput"></input>
 				<p> </p>
 				<button id="submitButton">Submit</button>
 			</div>
@@ -122,6 +122,5 @@
     <!-- Linking my JS and jQuery Sheets -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 
 </html>
